--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -1,10 +1,10 @@
 {
   "appName": {
     "message": "Environment Marker",
-    "description": "The name of the application"
+    "description": "Environment Marker Chrome Extension"
   },
   "appDescription": {
-    "message": "Use this marker and don&#39;t get mixed up about development (programming) environments nevermore.",
-    "description": "The description of the application"
+    "message": "Use this marker and don't get mixed up about development (programming) environments nevermore.",
+    "description": "Environment Marker Chrome Extension"
   }
 }
