Minor bug fixing for v1.1.

--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -4,7 +4,7 @@
     "description": "Environment Marker Chrome Extension"
   },
   "appDescription": {
-    "message": "Use this marker and don't get mixed up about development (programming) environments nevermore.",
+    "message": "Use the Environment Marker extension and prevent screw-ups with the (programming) environments.",
     "description": "Environment Marker Chrome Extension"
   }
 }
